--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -18,4 +18,4 @@ jobs:
           secrets: |
             secret/data/ci npm_token
       - name: Echo Secrets
-        run: echo ${{ steps.secrets.outputs.npm_token }}
+        run: echo $NPM_TOKEN
