--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -18,4 +18,4 @@ jobs:
           secrets: |
             secret/data/ci npm_token
       - name: Build Application Container
-        run: "docker build --build-arg app_secret=${NPM_TOKEN} -t exampleapp-ruby ."
+        run: "docker build --build-arg app_secret=${NPM_TOKEN} -t exampleapp-ruby ./Dockerfile"
