--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -19,4 +19,4 @@ jobs:
           secrets: |
             secret/data/ci npm_token
       - name: Build Application Container
-        run: docker build . --file Dockerfile --build-arg app_secret=$NPM_TOKEN -t exampleapp-ruby
+        run: docker build . --file Dockerfile --build-arg app_secret=${{ env.NPM_TOKEN }} -t exampleapp-ruby
