--- a/.github/workflows/docker-image-builder.yml
+++ b/.github/workflows/docker-image-builder.yml
@@ -1,5 +1,4 @@
-name: Super-Linter
-
+name: DockerImageBuilder
 # Run this workflow every time a new commit pushed to your repository
 on: push
 
@@ -17,6 +16,6 @@ jobs:
           tlsSkipVerify: true
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
-            secret/data/ci npm_token
+            secret/data/ci webapp_secret
       - name: Build Application Container
-        run: docker build . --file Dockerfile --build-arg app_secret="${{ env.NPM_TOKEN }}" -t exampleapp-ruby
+        run: docker build . --file Dockerfile --build-arg app_secret="${{ env.WEBAPP_SECRET }}" -t exampleapp-ruby
